<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bg_splash_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bg_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_splash_screen" />

    <TextView
        android:id="@+id/logo"
        style="@style/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textAlignment="center" />

    <Button
        style="@style/bigButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:onClick="startQuiz"
        android:text="@string/start" />
</RelativeLayout>